--- a/PageWebProfGloria/package.json
+++ b/PageWebProfGloria/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "sass": "^1.69.7"
   },
   "devDependencies": {
